# diffusion-in-cosomology

./: .gitignore  README.md  extract_features.py  pyproject.toml
data_analysis/: EDA.ipynb  code_process.ipynb
fast_dit/: create_npz.py  extract_features.py  sample.py  sample_ddp.py
fast_dit/dit_utils/: global_min_max.py  npy_to_tiff.py
fast_dit/ditutils/: __init__.py  data_stats_gen.py  npy_to_tiff.py  transforms.py  verify_conversion_integrity.py
fast_dit/evaluation/: __init__.py  power_spectra_eval.ipynb  power_spectra_eval.py
fast_dit/evaluation/cosmo_eval/: evalstats.py
fast_dit/evaluation/power_spectra/: __init__.py  power_spectra_eval.py  power_spectra_eval_resize.py
hyperparameters/: hyps.yaml
