[tool.poetry]
name = "diffusion model for cosmological data"
version = "0.1.0"
description = ""
authors = ["Sudarsaan Sundaram <sudarsaan@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
matplotlib = "^3.9.1"
opencv-python = "^4.10.0.84"
pillow = "^10.4.0"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
